[update] ignore firestore key

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-creditcards-e312a-346e92c9176a.json
+firestore.json
